# umamusume-localify-android

./: .gitmodules  CHANGELOG.App.md  CHANGELOG.md  README.ja-JP.md  README.ko-KR.md  README.md  build.gradle  gradle.properties  module.gradle  settings.gradle  update-riru.json  update-zygisk.json  update.json
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/kimjio/umamusumelocalify/settings/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp
app/src/main/java/com/kimjio/umamusumelocalify/settings/: ColorUtils.java  Constants.java  FileUtils.java  ModuleUtils.java
app/src/main/java/com/kimjio/umamusumelocalify/settings/activity/: BaseActivity.java  JsonEditActivity.java  JsonViewActivity.java  MainActivity.java  ManageTranslateActivity.java  MsgPackListActivity.java  SettingsActivity.java
app/src/main/java/com/kimjio/umamusumelocalify/settings/app/: SettingsApplication.java
app/src/main/java/com/kimjio/umamusumelocalify/settings/fragment/: BaseSettingsFragment.java  MsgPackSettingsFragment.java  SettingsFragment.java
app/src/main/res/drawable/: ic_animation.xml  ic_app_not_found.xml  ic_builtin_font.xml  ic_caption.xml  ic_carrot.xml  ic_close.xml  ic_custom_font.xml  ic_database.xml  ic_date_range.xml  ic_dump_msgpack.xml  ic_error.xml  ic_file_empty.xml  ic_fps.xml  ic_graphics_quality.xml  ic_history.xml  ic_info.xml  ic_json.xml  ic_json_collapse.xml  ic_json_expand.xml  ic_landscape.xml  ic_launcher_foreground.xml  ic_logger.xml  ic_notification.xml  ic_notifier_server.xml  ic_orientation.xml  ic_replace_asset_bundle.xml  ic_replace_assets.xml  ic_replace_assets_folder.xml  ic_request.xml  ic_request_off.xml  ic_resolution_3d_scale.xml  ic_response.xml  ic_restart.xml  ic_save.xml  ic_static_hash.xml  ic_static_text_id.xml  ic_system_resolution.xml  ic_translate.xml  ic_ui_scale.xml  ic_update.xml  (+5 more)
app/src/main/res/layout/: json_edit_activity.xml  json_item.xml  json_view_activity.xml  main_activity.xml  manage_translate_activity.xml  msg_pack_item.xml  msg_pack_list_activity.xml  package_item.xml  preference_widget_material_switch.xml  settings_activity.xml  settingslib_main_switch_bar.xml  settingslib_main_switch_layout.xml  translate_item.xml
app/src/main/res/layout-v33/: settingslib_main_switch_bar.xml
app/src/main/res/menu/: menu_json.xml  menu_json_edit.xml  menu_main.xml  menu_msgpack_list.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  ids.xml  json_strings.xml  pref_strings.xml  settingslib_attrs.xml  settingslib_colors.xml  settingslib_dimens.xml  settingslib_styles.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-ja/: arrays.xml  pref_strings.xml  strings.xml
app/src/main/res/values-ko/: arrays.xml  pref_strings.xml  strings.xml
app/src/main/res/values-night/: colors.xml  settingslib_colors.xml  themes.xml
app/src/main/res/values-night-v27/: themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: preference.xml  preference_msgpack.xml  split_configuration.xml
app/src/test/java/com/kimjio/umamusumelocalify/settings/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  elf_util.cpp  elf_util.h  fnv1a_hash.hpp  game.h  game.hpp  hook.cpp  hook.h  il2cpp_hook.cpp  il2cpp_hook.h  log.h  main.cpp  main_riru.cpp  main_zygisk.cpp  native_bridge_itf.h  stdinclude.hpp  zygisk.hpp
module/src/main/cpp/YAHFA/: common.hpp  trampoline.cpp  trampoline.hpp  utils.cpp  yahfa.cpp  yahfa.hpp
module/src/main/cpp/il2cpp/: il2cpp-api-functions.h  il2cpp-api-functions.hpp  il2cpp-class.h  il2cpp_symbols.cpp  il2cpp_symbols.h
module/src/main/cpp/include/: config.hpp
module/src/main/cpp/jwt/: base64.hpp  jwt.cpp  jwt.hpp
module/src/main/cpp/localify/: localify.cpp  localify.h
module/src/main/cpp/logger/: logger.cpp  logger.h
module/src/main/cpp/notifier/: notifier.cpp  notifier.h
module/src/main/cpp/template/: config.cpp
module/src/main/cpp/zygoteloader/: dex.cpp  dex.hpp  main.c  main.h  serializer.c  serializer.h
module/src/main/java/com/kimjio/umamusumelocalify/: Hooker.java  MethodCallback.java
resources/: config.json  notification.json
resources/custom_font/2020.3.24f1/GyeonggiTitle_Medium/: font.manifest
resources/custom_font/DoHyeon-Regular/: font  font.manifest
resources/custom_font/Jua-Regular/: font  font.manifest
resources/custom_font/SingleDay-Regular/: font.manifest
resources/replace_assets/: 2FOXNDZ5H52B3E4JMXVAJ4FRMDE3PX7Q
resources/replace_assets/2019.4.21f1 (KOR)/: 5MV4QHOSCXXUSACEAHFL67CXDMASTCJZ  CWMMKBICUB6TH7UWSSCVNMWDALMN6QQM  FJJRL67TAPI7IVUPVSF74HMO3JMTZZZA  W3E6LAKIRGK5LFTPHDA4KON37BJP5XGB  WOM54K3SJGIYA2REWQ3SMDY2275AZDW6
resources/replace_assets/2020.3.24f1 (JAP)/: 27AGHNJZYMXFFFYADRHDE6W34YYCTV3Q  2FOXNDZ5H52B3E4JMXVAJ4FRMDE3PX7Q  3BXKTXOMI3BBMJRX7HAR2BVK4PVCDYIV  7EZJZOG7VCSQNXUG64EHCD3OFY5TIDEW  C6OOKJLMIJE3F3BYV5WNKRNBGFYYANSX  FX73KU55XZUGWCLRUX2RFXTYBMPCHDAU  NN3LK5CTDHM5F7OVURIUYOPKEY7KCTP5  OEDYE6WKGUPSZFORRVPMZ5CNZBYA6UEX  OKRYMCFSNWSNDJ7GVHSKJ5TQWKJSCAIF  RQUI46V6W2A5GAGN3FI2TTKSIDOXZIL5  SHZSWTFRXRVFECGNC6WELV2KH3T55JJL
resources/replace_assets/Korean/2019.4.21f1 (KOR)/: 2QOF25RR3ILJFYOT7DIXIVUZUCT2SFWU  A7WQCQHVL7MWBUQAARUNZ5TSDICLY3IM  GZ7PEQ4MLKCBU446DWMWRZM74V7YERNW  ISXYUPN4AWBU2SDJQRBP2XCPGP6GVUXZ  OMM32NCBNTRNGC2GLLYHOMY5YTFWLZQ4  ROXH6ISEHXXOOE6KDTZ22NETSYHR2352  TS7PZBG452TGOGPTQWYFLY3J5RDZN6QX
resources/replace_assets/Korean/2020.3.24f1 (JAP)/: 4B4LEZNTINV5FTHESBKQYH26DT2443P5  7YXLPIFFG2HT6RWUZVOPQNNDLTDOBJL2  P5TQWJDCNGWEMRQO3VP32GFQHXWFDZ6R  VKFGDF67YMFTJ2OZNZH2NC4TC3PDR5NQ  XNXOB4NEKAYJINZPJCT2ELG7XWXLPY52
template/magisk_module/: customize.sh  module.prop  post-fs-data.sh  riru.sh  service.sh  system.prop  uninstall.sh  verify.sh
template/magisk_module/common/: install.sh
(+12 files in other folders)
